--- a/test/integration/targets/npm/tasks/main.yml
+++ b/test/integration/targets/npm/tasks/main.yml
@@ -28,6 +28,7 @@
 - include_tasks: run.yml
   vars:
     nodejs_version: '{{ item }}'
+    nodejs_path: 'node-v{{ nodejs_version }}-{{ ansible_system|lower }}-x{{ ansible_userspace_bits }}'
   with_items:
     - 7.10.1 # provides npm 4.2.0 (last npm < 5 released)
     - 8.0.0 # provides npm 5.0.0
