--- a/test/integration/targets/npm/tasks/setup.yml
+++ b/test/integration/targets/npm/tasks/setup.yml
@@ -1,6 +1,6 @@
 - name: 'Download NPM'
   unarchive:
-    src: 'https://nodejs.org/dist/v{{ nodejs_version }}/node-v{{ nodejs_version }}-{{ ansible_system|lower }}-x{{ ansible_userspace_bits }}.tar.gz'
+    src: 'https://nodejs.org/dist/v{{ nodejs_version }}/{{ nodejs_path }}.tar.gz'
     dest: '{{ output_dir }}'
     remote_src: yes
-    creates: '{{ output_dir }}/node-v{{ nodejs_version }}-{{ ansible_system|lower }}-x{{ ansible_userspace_bits }}.tar.gz'
+    creates: '{{ output_dir }}/{{ nodejs_path }}.tar.gz'
