--- a/test/integration/targets/filesystem/tasks/setup.yml
+++ b/test/integration/targets/filesystem/tasks/setup.yml
@@ -7,7 +7,6 @@
     - e2fsprogs
     - xfsprogs
     - dosfstools
-    - fatresize
 
 - block:
   - name: install btrfs progs
@@ -32,16 +31,26 @@
       - btrfsprogs
   when: ansible_system == 'Linux'
 
+- block:
+  - name: install fatresize
+    package:
+      name: fatresize
+      state: present
+  - command: fatresize --help
+    register: fatresize
+  - set_fact:
+      fatresize_version: '{{ fatresize.stdout_lines[0] | regex_search("[0-9]+\.[0-9]+\.[0-9]+")  }}'
+  when:
+    - ansible_system == 'Linux'
+    - ansible_os_family != 'Suse'
+    - ansible_os_family != 'RedHat' or (ansible_distribution == 'CentOS' and ansible_distribution_version is version('7.0', '>='))
+
 - command: mke2fs -V
   register: mke2fs
-
-- command: fatresize --help
-  register: fatresize
 
 - set_fact:
     # mke2fs 1.43.6 (29-Aug-2017)
     e2fsprogs_version: '{{ mke2fs.stderr_lines[0] | regex_search("[0-9]{1,2}\.[0-9]{1,2}(\.[0-9]{1,2})?") }}'
-    fatresize_version: '{{ fatresize.stdout_lines[0] | regex_search("[0-9]+\.[0-9]+\.[0-9]+")  }}'
 
 - set_fact:
     # http://e2fsprogs.sourceforge.net/e2fsprogs-release.html#1.43
@@ -49,4 +58,4 @@
     # using the entire block device.
     force_creation: "{{ e2fsprogs_version is version('1.43', '<') }}"
     # Earlier versions have a segfault bug
-    resize_vfat: "{{ fatresize_version is version('1.0.4', '>=') }}"
+    resize_vfat: "{{ fatresize_version|default('0.0') is version('1.0.4', '>=') }}"
